--- a/Homework3/trdli/style.css
+++ b/Homework3/trdli/style.css
@@ -6,10 +6,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  background-image: url("./data/pic/Stairwell.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  background: linear-gradient(45deg, black, gray, white);
 }
 
 body {
@@ -22,16 +19,10 @@ body {
   align-items: center;
   font-family: inherit;
   background: rgba(255, 255, 255, .5);
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  box-shadow: 20px 15px 15px #201e29;
-  border-radius: 15px;
 }
 
 .Greeting_div {
   flex-direction: column;
-  padding: 2rem;
-  font-size: 2rem;
   font-weight: bold;
   color: #1e1e1e;
   text-shadow: #201e29;
@@ -77,7 +68,11 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 60vh;
+  height: 100%;
+}
+
+#pie-container-graph2, #bar-container-graph3 {
+  height: 40vh;
 }
 
 .text-muted {
